--- a/src/styles/other/Header.css
+++ b/src/styles/other/Header.css
@@ -9,7 +9,7 @@
     justify-content: space-between;
     position: absolute;
     top: 0;
-    z-index: 1000;
+    z-index: 10;
 }
 
 .h-right {
@@ -33,4 +33,101 @@
     padding-right: 10px;
     height: 27px;
     border-bottom: 2px solid var(--color-primary);
+    width: fit-content;
+}
+
+.h-toggle {
+  display: none;
+  cursor: pointer;
+  font-size: 24px;
+  cursor: pointer;
+}
+
+.h-dropdown {
+  position: fixed;
+  top: 0;
+  right: 0;
+  height: 100vh;
+  width: 100%;
+  background-color: var(--color-background);
+  display: flex;
+  flex-direction: column;
+  z-index: 100;
+  animation: scrollin .3s ease-in-out;
+  padding: 30px;
+  box-sizing: border-box;
+}
+
+@keyframes scrollin {
+  0% {
+    transform: translateY(-100%);
+  }
+  100% {
+    transform: translateY(0);
+  }
+}
+
+.h-dropdown-close {
+  position: fixed;
+  top: 15px;
+  left: 15px;
+  font-size: 22px;
+  color: var(--lightest);
+  cursor: pointer;
+}
+
+.h-dropdown-links {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  margin-top: 60px;
+}
+
+.h-dropdown-link {
+  text-decoration: none;
+  color: var(--lightest);
+  padding: 30px 0 10px 10px;
+  border-bottom: 1px solid var(--color-muted);
+  width: 70%;
+  font-weight: 500;
+  font-size: 17px;
+  transition: .2s;
+  cursor: pointer;
+}
+
+
+@media (max-width:620px) {
+  .h-right {
+    display: none;
+  }
+
+  .h-toggle {
+    display: flex;
+  }
+}
+
+.h-dropdown-bottom {
+    position: absolute;
+    bottom: 30px;
+    left: 30px;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+}
+
+.h-dropdown-socials {
+    display: flex;
+    align-items: center;
+    border-bottom: 1px solid var(--color-muted);
+    width: calc(100% - 60px);
+    margin-bottom: 15px;
+
+}
+
+.h-dropdown-social-link {
+    color: var(--lightest);
+    font-size: 26px;
+    margin: 0 8px;
+    cursor: pointer;
+    transition: .2s;
 }
