--- a/src/styles/other/Footer.css
+++ b/src/styles/other/Footer.css
@@ -18,15 +18,12 @@
 
 .footer_inner_left {
     display: flex;
+    gap: 100px;
 }
 
 .footer_section {
     display: flex;
     flex-direction: column;
-}
-
-.footer_section_left {
-    margin-right: 100px;
 }
 
 .footer_subtitle {
@@ -80,20 +77,7 @@
     color: var(--darkyellow);
 }
 
-@media (max-width: 900px) {
-    .footer_inner {
-        flex-direction: column;
-    }
-}
-
-
-@media (max-width: 450px) {
-    .footer_section_left {
-        margin-right: 30px;
-    }
-}
-
-.h-logo {
+.footer-logo {
     font-size: 22px;
     font-weight: 500;
     padding-right: 10px;
@@ -101,3 +85,26 @@
     height: 32px;
     border-bottom: 2px solid var(--color-primary);
 }
+
+@media (max-width: 900px) {
+    .footer_inner {
+        flex-direction: column;
+        gap: 30px;
+    }
+}
+
+@media (max-width: 560px) {
+    .footer_inner_left {
+        gap: 20px;
+    }
+
+    .footer_subtitle {
+        width: 120px;
+    }
+
+    .footer_para {
+        font-size: 15px;
+    }
+}
+
+
