--- a/src/styles/other/Header.css
+++ b/src/styles/other/Header.css
@@ -47,7 +47,7 @@
   position: fixed;
   top: 0;
   right: 0;
-  height: 100vh;
+  height: 100%;
   width: 100%;
   background-color: var(--color-background);
   display: flex;
