--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -9,7 +9,7 @@
   align-items: center;
   justify-content: center;
   height: 65vh;
-  background-image: url("../images/main.jpg");
+  background-image: url("../images/main1.jpg");
   background-size: cover;
   background-position: center;
   margin-bottom: 60px;
