--- a/src/styles/Contact.css
+++ b/src/styles/Contact.css
@@ -7,7 +7,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background-image: url('../images/main.jpg');
+    background-image: url('../images/main1.jpg');
     background-size: cover;
     background-position: center;
     height: 65vh;
@@ -37,7 +37,7 @@
     padding: 24px;
 }
 .c-row { display: flex; gap: 16px; }
-.c-field { display: flex; flex-direction: column; gap: 8px; margin: 12px 0; }
+.c-field { display: flex; flex-direction: column; gap: 8px; margin-bottom: 25px; flex: 1;}
 .c-label { font-size: 13px; font-weight: 700; letter-spacing: 1px; text-transform: uppercase; opacity: .8; }
 .c-input, .c-textarea {
     padding: 12px 14px;
