--- a/src/styles/Main.css
+++ b/src/styles/Main.css
@@ -11,7 +11,7 @@
     height: 100vh;
     margin-bottom: 100px;
     width: 100%;
-    background-image: url('../images/main.jpg');
+    background-image: url('../images/main7.jpg');
     background-size: cover;
     background-position: center;
     display: flex;
@@ -273,7 +273,7 @@
 .m-custom {
     width: 100%;
     height: 500px;
-    background-image: url('../images/main.jpg');
+    background-image: url('../images/main1.jpg');
     background-size: cover;
     background-position: center;
 }
