--- a/src/styles/Products.css
+++ b/src/styles/Products.css
@@ -10,7 +10,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background-image: url('../images/main.jpg');
+    background-image: url('../images/main1.jpg');
     height: 65vh;
     width: 100%;
     background-size: cover;
