--- a/src/styles/other/Header.css
+++ b/src/styles/other/Header.css
@@ -1,16 +1,19 @@
 .h-header {
     height: 70px;
     width: 100%;
-    background: transparent;
+    position: fixed;
+    top: 0;
+    left: 0;
+    backdrop-filter: blur(5px);
+    background-color: rgba(255, 255, 255, 0.25);
     display: flex;
     align-items: center;
     padding: 0 30px;
     box-sizing: border-box;
     justify-content: space-between;
-    position: absolute;
-    top: 0;
     z-index: 10;
 }
+
 
 .h-right {
     gap: 25px;
@@ -39,8 +42,7 @@
 .h-toggle {
   display: none;
   cursor: pointer;
-  font-size: 24px;
-  cursor: pointer;
+  font-size: 21px;
 }
 
 .h-dropdown {
