--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=League+Spartan:wght@100..900&display=swap');
 
 @tailwind base;
 @tailwind components;
@@ -7,7 +8,7 @@
 * {
   margin: 0;
   padding: 0;
-  font-family: "Lora", serif;
+  font-family: "League Spartan", sans-serif;
 }
 
 .App {
